# ClickbaitDetector

./: .gitignore  .pylintrc  README.md  README_poetry.md  classes.py  download_from_gcp.py  environment.yml  functions.py  model_settings.json  modelling.ipynb  pyproject.toml  requirements_workflow.txt  scraping_zabawa.ipynb  train_predictive_models.ipynb  train_word2vec_models.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
data/: merged_titles_labels.csv
djangoapp/: app_tests.txt  manage.py
modelling/: .gitignore  add_to_gcp.py  catboost_model  feature_sel.ipynb  functions.py  grid_search_grids.json  grid_search_results.json  grid_search_results_new.json  model_settings.json  random_checks.ipynb  select_best_word2vec.ipynb  select_best_word2vec_large_models part2.ipynb  select_best_word2vec_large_models.ipynb  select_best_word2vec_small_models part2.ipynb  select_best_word2vec_small_models.ipynb  train_predictive_models.ipynb  train_predictive_models_example_model.ipynb  train_predictive_models_grid_on_best_w2v.ipynb  train_predictive_models_grid_on_best_w2v_old.ipynb  train_predictive_models_grid_xgb_fix.ipynb  train_word2vec_models.ipynb  words_to_remove.txt
src/: config.json
word2vec_models/: vocabulary.txt  word2vec_vs1000_win3_sg0.model  word2vec_vs1000_win3_sg1.model  word2vec_vs1000_win4_sg0.model  word2vec_vs1000_win4_sg1.model  word2vec_vs1000_win5_sg0.model  word2vec_vs1000_win5_sg1.model  word2vec_vs1000_win6_sg0.model  word2vec_vs1000_win6_sg1.model  word2vec_vs1000_win7_sg0.model  word2vec_vs1000_win7_sg1.model  (+86 more)
(+187 files in other folders)
