[tool.poetry]
name = "pracainzynierska"
version = "0.1.0"
description = "Praca inzynierska"
authors = ["alexmal01"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.31.0"
Django = "^4.2.6"
pip = "^23.2.1"
setuptools = "^68.2.2"
SQLite4 = "^0.1.1"
sqlparse = "^0.4.4"
tk = "^0.1.0"
wheel = "^0.41.2"
beautifulsoup4 = "^4.12.2"
bs4 = "^0.0.1"
soupsieve = "^2.5"
black = "^23.9.1"
coverage = "^7.3.2"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2023.10"
google = "^3.0.0"
google-cloud-aiplatform = "^1.38.1"
google-auth = "^2.23.4"
google-cloud = "^0.34.0"
google-cloud-core = "^2.3.3"
pytest = "^7.4.3"
nltk = "^3.8.1"
gensim = "^4.3.2"
inflect = "^7.0.0"
catboost = "^1.2.2"
transformers = "^4.35.2"
google-generativeai = "^0.3.1"
scikit-learn = "1.3.2"
django-multiselectfield = "^0.1.12"

[tool.poetry.group.dev.dependencies]
Django = "^4.2.6"
Scrapy = "^2.11.0"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
scikit-learn = "^1.3.1"
numpy = "^1.26.0"
pandas = "^2.1.1"
requests = "^2.31.0"
Pillow = "^10.0.1"
asyncio = "^3.4.3"
scipy = "^1.11.3"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
lightgbm = "^4.1.0"
xgboost = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
